--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Ivan Ecónomo - Portfolio</title>
   </head>
   <body>
     <div id="root" class="bg-slate-50 dark:bg-slate-900"></div>
