--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/ivaneconomo/bucket/main/ivaneco_portfolio.jpg?token=GHSAT0AAAAAACDXJCX4YFOHRV3UFCBXZF4MZEDXSNQ"
+      content="https://raw.githubusercontent.com/ivaneconomo/bucket/main/ivaneco_portfolio.jpg"
     />
 
     <!-- Twitter Meta Tags -->
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://raw.githubusercontent.com/ivaneconomo/bucket/main/ivaneco_portfolio.jpg?token=GHSAT0AAAAAACDXJCX4YFOHRV3UFCBXZF4MZEDXSNQ"
+      content="https://raw.githubusercontent.com/ivaneconomo/bucket/main/ivaneco_portfolio.jpg"
     />
   </head>
   <body>
